--- a/src/component/CheckoutProgress/CheckoutProgress.style.scss
+++ b/src/component/CheckoutProgress/CheckoutProgress.style.scss
@@ -1,6 +1,6 @@
 .CheckoutProgress {
     display: grid;
-    grid-template-columns: 1fr auto 30% auto 1fr;
+    grid-template-columns: 1fr auto 25% auto 1fr;
     grid-auto-flow: column;
     background: var(--breadcrumbs-background);
     align-items: center;
@@ -8,27 +8,55 @@
     padding: 30px 0;
 
     &-Step {
+        position: relative;
         border-radius: 50%;
         width: 35px;
         height: 35px;
         display: grid;
         place-items: center;
-        background-color: var(--secondary-dark-color);
+        background-color: #0a0a0a;
+        opacity: .2;
+        &_isRiched {
+            background-color: var(--button-background);
+            opacity: 1;
+        }
+    }
+
+    &-StepTitle{
+        position: absolute;
+        top: 40px;
+        width: max-content;
         font-weight: 700;
         font-size: 1.32rem;
-        color: white;
-        &_isPassed {
-            background-color: var(--button-background);
-        }
+        color: #0a0a0a;
     }
 
     &-Line {
         border-radius: 10px;
         width: 100%;
         height: 5px;
-        background-color: var(--secondary-dark-color);
-        &_isPassed {
+        background-color: #0a0a0a;
+        opacity: .2;
+        &_isRiched {
             background-color: var(--button-background);
+            opacity: 1;
         }
+    }
+
+    &-CheckIcon {
+        position: relative;
+        width: 16px;
+        height: 8px;
+        border-width: 2px 2px 0 0;
+        border-style: solid;
+        border-color: white;
+        transform: rotate(135deg);
+        bottom: 2px;
+    }
+
+    &-OrderIcon{
+        font-weight: 700;
+        font-size: 1.32rem;
+        color: white;
     }
 }
